# LeadFlow-Architecture

./: .env.example  .gitignore  README.md  architecture.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  models.py
app/schemas/: serper.py
app/scraper/: client.py  manager.py  parser.py  scraper.py  serper_client.py
app/sender/: worker.py
app/utils/: logger.py  validators.py
automation/: Make.json
tests/: test_suite.py
