[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "make-lead-gen"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "pydantic>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "ruff>=0.9.0",
    "pyright>=1.1.400",
]

[tool.setuptools]
packages = ["app"]
py-modules = ["main", "seed_test_data", "debug_serper"]

[tool.setuptools.package-dir]
app = "app"

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [
    "venv", ".venv", "__pycache__", "build", "dist", 
    "logs", "automation", ".pytest_cache", "htmlcov", ".coverage"
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["F401", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/.*", "**/__pycache__", "build", "dist", "venv", ".venv"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = true